--- a/style.css
+++ b/style.css
@@ -23,3 +23,54 @@ body {
     border-radius: 10px;
     box-shadow: 0 20px 40px rgba(38, 33, 61, 0, 2);
 }
+
+.search-box {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.search-box input {
+    width: 70%;
+    outline: none;
+    border: none;
+    padding: 5px;
+    font-size: 16px;
+    border-bottom: 3px solid #ae9cff;
+}
+
+#searchBtn {
+    cursor: pointer;
+    padding: 15px 0;
+    width: 25%;
+    background-color: #ae9cff;
+    border-radius: 8px;
+    box-shadow: 0 20px 40px rgba(38, 33, 61, 0, 2);
+    color: white;
+    outline: none;
+    border: none;
+}
+
+.result {
+    position: relative;
+}
+
+h3 {
+    font-size: 30px;
+    color: #1f194c;
+}
+
+.word {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.result button {
+    cursor: pointer;
+    background-color: transparent;
+    color: #ae9cff;
+    border: none;
+    outline: none;
+    font-size: 20px;
+}
