--- a/style.css
+++ b/style.css
@@ -74,3 +74,22 @@ h3 {
     outline: none;
     font-size: 20px;
 }
+
+.detail {
+    display: flex;
+    gap: 10px;
+    color: #b3b6d4;
+    font-size: 14px;
+    margin: 5px 0 20px 0;
+}
+
+.defintion, .example {
+    color: #575a7b;
+}
+
+.example {
+    font-style: italic;
+    border-left: 5px solid #ae9cff;
+    padding-left: 20px;
+    margin-top: 30px;
+}
