--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
     width: 25%;
     background-color: #ae9cff;
     border-radius: 8px;
+    font-size: 90%;
     box-shadow: 0 20px 40px rgba(38, 33, 61, 0, 2);
     color: white;
     outline: none;
@@ -58,6 +59,7 @@ body {
 h3 {
     font-size: 30px;
     color: #1f194c;
+    text-transform: capitalize;
 }
 
 .word {
@@ -66,13 +68,17 @@ h3 {
     margin-top: 80px;
 }
 
+.btn-group button{
+    padding: .2em;
+}
+
 .result button {
     cursor: pointer;
     background-color: transparent;
     color: #ae9cff;
     border: none;
     outline: none;
-    font-size: 20px;
+    font-size: 32px;
 }
 
 .detail {
