--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-body {
+body, #searchBtn {
     background-color: #ae9cff;
 }
 
@@ -43,7 +43,6 @@ body {
     cursor: pointer;
     padding: 15px 0;
     width: 25%;
-    background-color: #ae9cff;
     border-radius: 8px;
     font-size: 90%;
     box-shadow: 0 20px 40px rgba(38, 33, 61, 0, 2);
